--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/qazwsx9006/mask.git"
+  },
+  "dependencies": {
+    "lodash": "^4.17.15",
+    "mongoose": "^5.8.11",
+    "neat-csv": "^5.1.0"
   }
 }
